FN Translations added for guidelinesWP
All translation copied with the exception of figures in 03-chp3 and 05-chap5. In addition, references title cannot be translated without failing to knit.

--- a/guidelinesWP_FN/01.5-reviewRPs.Rmd
+++ b/guidelinesWP_FN/01.5-reviewRPs.Rmd
@@ -1,28 +1,29 @@
 
-# REVIEW OF REFERENCE POINTS AND THEIR ROLES FOR PACIFIC SALMON {#review}
+# EXAMEN DES POINTS DE RÉFÉRENCE ET DE LEURS RÔLES POUR LE SAUMON DU PACIFIQUE {#review}
 
-## INDICATORS AND REFERENCE POINTS FOR PACIFIC SALMON
+## INDICATEURS ET POINTS DE RÉFÉRENCE POUR LES SAUMONS DU PACIFIQUE
 
 
 \begin{tcolorbox}[standard jigsaw,opacityback=0.8,colframe=black,boxrule=0.7pt,left=0.1in, sharp corners]
-\subsection*{Key Points:}
+\subsection*{Principaux points:}
 \begin{itemize}
-\item LRPs have been widely adopted in Canadian fisheries.
-\item LRPs can be identified along a variety of indicators, and those indicators can be categorized as natural metrics, proxies for natural metrics, or composites of metrics.
-\item Under Canada's WSP, a composite of metrics ('multidimensional approach') is used in status assessments, including metrics on current spawner abundances, short and long-term trends in abundances, and the distribution of spawning, among others.
-\item DFO has recently developed the Pacific Salmon Status Scanner tool to rapidly approximate the multidimensional approach for salmon assessments.
-\item In some cases, single-metric approaches in which spawner abundances are compared with an abundance-based benchmark have been used as proxies for status under the WSP.
+\item Les points de référence limites (PRL) ont été largement adoptés dans les pêches canadiennes.
+\item Les PRL peuvent être déterminés en plus de différents indicateurs, et ces indicateurs peuvent être classés en tant que paramètres naturels, substituts de paramètres naturels ou composites de paramètres.
+\item Dans le cadre de la Politique concernant le saumon sauvage (PSS)  du Canada, un ensemble de paramètres (« approche multidimensionnelle ») est utilisé dans les évaluations de l’état des stocks, y compris des mesures sur l’abondance actuelle des géniteurs, les tendances à court et à long terme de l’abondance et la répartition de la reproduction, entre autres.
+\item Pêches et Océans Canada (MPO) a récemment mis au point l’explorateur de l’état des saumons du Pacifique, un outil qui permet de reproduire rapidement l’approche multidimensionnelle des évaluations du saumon.
+\item Dans certains cas, des approches à un seul paramètre dans lesquelles l’abondance des géniteurs est comparée à un point de référence basé sur l’abondance ont été utilisées comme approximations de l’état dans le cadre de la PSS.
 \end{itemize}
 \end{tcolorbox}
 
 
-LRPs are common in the assessment and management of marine fisheries where they are used to identify and communicate status, as components of objectives, and to trigger changes in harvest rates among other roles
-[@marentetteSpecificationPrecautionaryApproach2021; @kronlundConsiderationsDesignRebuilding2021] (Section \@ref(roleLRPs)). <!--Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016,  @puntHarvestControlRules2010, and @dowlingEmpiricalHarvestStrategies2015 (the latter for data-poor fisheries). --><!--@sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by--> LRPs have been widely adopted in Canadian fisheries. A review based on a survey of 177 Canadian stocks excluding salmonids and transboundary stocks, found that 58% had adopted LRPs, although the methods used to estimate LRPs varied considerably among stocks [@marentetteSpecificationPrecautionaryApproach2021]. <!--@kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].-->
 
-LRPs and indicators of status can be categorized in ways that demonstrate the diversity of approaches that are available across data types and species life-histories. In particular, LRPs can be derived from theoretical relationships (e.g., stock-recruitment based  reference points), historical patterns (e.g., abundance from which recovery has been observed in the past), or empirical analyses on abundances or life-history traits (Marentette et al. In revision). For marine fish species, LRPs are typically estimated as a minimum level of spawning biomass (or proxy) that should not be breached [@sheltonLimitsOverfishingReference2002; @kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021].  @dfoFisheryDecisionmakingFramework2009 identifies additional indicators such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionmakingFramework2009].  In general, indicators of status can be categorized as natural metrics (e.g., total abundances or other biological or population characteristics), a proxy for a natural metric (e.g., abundances of indicator stocks), or a composite of indicators that combine information over multiple dimensions or biological metrics of status (Marentette et al. In revision).  
+Les PRL sont courants dans l’évaluation et la gestion des pêches marines où ils sont utilisés, entre autres, pour déterminer et communiquer la situation, comme composantes des objectifs, et pour déclencher des changements dans les taux de récolte
+[@marentetteSpecificationPrecautionaryApproach2021; @kronlundConsiderationsDesignRebuilding2021] (Section \@ref(roleLRPs)). <!--Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016,  @puntHarvestControlRules2010, and @dowlingEmpiricalHarvestStrategies2015 (the latter for data-poor fisheries). --><!--@sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by--> Les PRL ont été largement adoptés dans les pêches canadiennes. Une étude basée sur un relevé portant sur 177 stocks canadiens, à l’exclusion des salmonidés et des stocks transfrontaliers, a révélé qu’un PRL avait été adopté pour 58 % d’entre eux, mais que les méthodes utilisées pour estimer le PRL variaient considérablement d’un stock à l’autre [@marentetteSpecificationPrecautionaryApproach2021]. <!--@kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].-->
+
+Les PRL et les indicateurs d’état peuvent être catégorisés de manière à démontrer la diversité des approches disponibles pour les types de données et les cycles biologiques des espèces. En particulier, les PRL peuvent être dérivés de relations théoriques (p. ex. points de référence fondés sur le stock-recrutement), de modèles historiques (p. ex. abondance à partir de laquelle un rétablissement a été observé dans le passé) ou d’analyses empiriques sur les abondances ou les caractéristiques du cycle biologique (Marentette et al. en cours de révision). Pour les espèces de poissons marins, les PRL sont généralement estimés comme un niveau minimum de biomasse reproductrice (ou valeur de substitution) qui ne doit pas être dépassé [@sheltonLimitsOverfishingReference2002; @kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021]. @dfoFisheryDecisionmakingFramework2009 indique des indicateurs supplémentaires, tels que les indices de taux de capture, les profils de taille et d’âge et les sex-ratios, qui « peuvent et doivent être pris en considération pour définir un dommage grave et orienter la prise de décision concernant l’état des stocks »[@dfoFisheryDecisionmakingFramework2009]. En général, les indicateurs de l’état peuvent être catégorisés comme étant des mesures naturelles (p. ex. l’abondance totale ou d’autres caractéristiques biologiques ou de population), un substitut d’une mesure naturelle (p. ex. l’abondance des stocks indicateurs) ou un composite d’indicateurs qui combinent l’information sur plusieurs dimensions ou mesures biologiques de l’état (Marentette et al. en cours de révision).  
 
 
-The composite or multidimensional approach for assessing status, sometimes called a "traffic light" approach [@sheltonLimitsOverfishingReference2002], is particularly useful when theoretical or historical abundance-based metrics are not estimable or applicable, or when data are limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of numerous data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab, *Chionoecetes opilio*, in Canada, where data on catch per unit effort, egg clutches, and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection, when metrics capture processes at a variety of scales. These scale mismatches are not uncommon among marine species, especially invertebrate and salmonid species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. They can create challenges when identifying LRPs at the scale of major stocks [@dfoScienceAdvicePrecautionary2021], and can make undesirable states in fish populations difficult to detect and mitigate.  <!--CH: I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
+L’approche composite ou multidimensionnelle de l’évaluation de l’état, parfois appelée approche des « feux de circulation » [@sheltonLimitsOverfishingReference2002], est particulièrement utile lorsque les paramètres théoriques ou historiques basés sur l’abondance ne sont pas estimables ou applicables, ou lorsque les données sont limitées [@dowlingEmpiricalHarvestStrategies2015]. Les approches multidimensionnelles permettent de prendre en compte de nombreuses sources de données, y compris souvent des connaissances spécialisées, afin d’intégrer des paramètres contradictoires dans les évaluations. Par exemple, des points de référence multidimensionnels ont été appliqués au crabe des neiges, *Chionoecetes opilio*, au Canada, où les données sur les captures par unité d’effort, les pontes et les rejets sont intégrées dans les évaluations des stocks [@mullowneyBasisPrecautionaryApproach2018]. Les approches multidimensionnelles peuvent également être utiles pour remédier aux disparités d’échelles entre les stocks biologiques, l’unité de gestion et l’échelle spatiale de la collecte de données, lorsque les mesures saisissent des processus à diverses échelles. Ces décalages d’échelle ne sont pas rares chez les espèces marines, en particulier chez les invertébrés et les espèces de salmonidés[@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. Ils peuvent créer des difficultés lors de la détermination des PRL à l’échelle des principaux stocks [@dfoScienceAdvicePrecautionary2021], et peuvent rendre les états indésirables des populations de poissons difficiles à détecter et à atténuer. <!--CH: I couldn’t find any reference for American Lobster- i.e., Adam Cook’s ppt from TESA workshop-->
 
 
 
@@ -30,10 +31,10 @@ The composite or multidimensional approach for assessing status, sometimes calle
 
 CH; added "when metrics capture processes at a variety of scales". Admittedly, it's more the type of metrics, e.g., using ppns of biological units above critical threshold instead of total BM, instead of the number of metrics that's most important.  However, these alternative metrics tend to be common in multidimenstional assessments.-->
 
-Methods for estimating reference points for Pacific salmon are diverse, often taking advantage of its semelparous and anadromous life-history and limits on capacity in freshwater, and other population characteristics [@portleyLimitReferencePoints2014; @chaputConsiderationsDefiningReference2012]. Under Canada's WSP, status assessments integrate data across numerous indicators or metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to population productivity [@holtIndicatorsStatusBenchmarks2009]. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016].  An advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of data types and hence CUs. Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon CUs in Canada, such as Fraser River Sockeye Salmon [@grantEvaluationUncertaintyFraser2012; @grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *Oncorhynchus kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]. However, these expert-driven processes can be challenging to implement on a broad and timely basis due to the high demand they place on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, Pestal et al. (In revision) developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm was incorporated into DFO's Pacific Salmon Status Scanner and then verified by local assessment experts and tested with 'out-of-sample' CUs not included in the original formulation (Pestal et al. In revision). 
+Les méthodes d’estimation des points de référence pour le saumon du Pacifique sont diverses, et tirent souvent parti de son cycle biologique sémelpare et anadrome, des limites de sa capacité en eau douce et d’autres caractéristiques de la population [@portleyLimitReferencePoints2014; @chaputConsiderationsDefiningReference2012]. Dans le cadre de la PSS du Canada, les évaluations de l’état intègrent des données sur de nombreux indicateurs ou paramètres représentant différentes caractéristiques de la population, notamment l’abondance actuelle des géniteurs, les tendances à court et à long terme de l’abondance, la répartition de la fraie et la mortalité par pêche par rapport à la productivité de la population [@holtIndicatorsStatusBenchmarks2009]. Des valeurs de référence sont établies pour chaque paramètre et une estimation multidimensionnelle globale de l’état de l’unité de conservation (UC) est obtenue en intégrant l’état aux paramètres [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016]. Un avantage de cette approche est que les UC manquant de données pour un paramètre peuvent toujours être évaluées par rapport aux autres paramètres, ce qui rend le cadre applicable à une gamme relativement large de types de données et donc d’UC. Des processus dirigés par des experts pour intégrer des paramètres souvent contradictoires dans le cadre multidimensionnel ont été mis en œuvre pour de nombreuses UC de saumon du Pacifique au Canada, comme le saumon rouge du fleuve Fraser [@grantEvaluationUncertaintyFraser2012; @grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], le saumon coho du Fraser intérieur, *Oncorhynchus kisutch *[@dfoWildSalmonPolicy2015], et le saumon chinook du sud de la Colombie-Britannique [@dfoIntegratedBiologicalStatus2016]. Toutefois, la mise en œuvre à grande échelle et en temps voulu de ces processus dirigés par des experts peut s’avérer difficile en raison de la forte demande de temps et de ressources humaines en jeu. Selon les cohérences qui ont émergé des évaluations où l’intégration de plusieurs paramètres a été appliquée, Pestal et al. (en cours de révision) ont élaboré un algorithme pour reproduire approximativement l’état global selon la PSS en combinant ces paramètres dans un arbre de décision, à l’échelle des UC. Cet algorithme a été intégré à l’explorateur de l’état des saumons du Pacifique, puis vérifié par des experts locaux en évaluation et testé avec des UC « hors échantillon » non incluses dans la formulation originale (Pestal et al. en cours de révision). 
 
 
-In some cases, single-metric approaches in which spawner abundances are compared with an abundance-based benchmark have been used as proxies for WSP status both by organizations external to DFO [@pacificsalmonfoundationMethodsAssessingStatus2020; @pacificsalmoncommissionChapterPerformanceEvaluation2016]  and occasionally within DFO [e.g., Barkley Sockeye Salmon, @chaputConsiderationsDefiningReference2012]. One recommended lower benchmark on spawning abundances under Canada's WSP is S~gen~, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions [@holtEvaluationBenchmarksConservation2009]. Benchmarks on spawner abundances for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are often not available [e.g., @parkenHabitatbasedMethodsEstimate2006, Section \@ref(cu-est-methods)]. Biological benchmarks under the WSP are distinguished from triggers in harvest control rules that incorporate additional socioeconomic considerations beyond biological considerations [@holtDistinguishingBenchmarksBiological2013a].
+Dans certains cas, des approches à mesure unique dans lesquelles l’abondance des géniteurs est comparée à un point de référence basé sur l’abondance ont été utilisées comme approximations de l’état selon la PSS, à la fois par des organisations externes au MPO [@pacificsalmonfoundationMethodsAssessingStatus2020; @pacificsalmoncommissionChapterPerformanceEvaluation2016] et, à l’occasion, au sein du MPO [ p. ex. le saumon rouge de Barkley, @chaputConsiderationsDefiningReference2012]. L’un des points de référence inférieurs recommandés sur l’abondance des géniteurs dans le cadre de la PSS du Canada est G~gén~, l’abondance qui permet le rétablissement au G~RMD~ en une génération de saumon dans des conditions d’équilibre [@holtEvaluationBenchmarksConservation2009]. Des points de référence sur l’abondance des géniteurs dans des contextes où les données sont limitées ont également été indiqués en reconnaissance du fait que les données requises pour estimer les points de référence basés sur le rapport géniteurs-recrues ne sont souvent pas disponibles [par exemple, @parkenHabitatbasedMethodsEstimate2006, section \@ref(cu-est-methods)]. Les repères biologiques dans le cadre de la PSS se distinguent des déclencheurs dans les règles de contrôle des prises qui intègrent des considérations socio-économiques supplémentaires en plus des considérations biologiques [@holtDistinguishingBenchmarksBiological2013a].
 
 <!--CH omit: @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. 
 -->
@@ -42,34 +43,34 @@ In some cases, single-metric approaches in which spawner abundances are compared
 
 
 
-## ROLES OF LRPS IN CANADA {#roleLRPs}
+## RÔLES DES PRL AU CANADA  {#roleLRPs}
 
 \begin{tcolorbox}[standard jigsaw,opacityback=0.8,colframe=black,boxrule=0.7pt,left=0.1in, sharp corners]
-\subsection*{Key Points:}
+\subsection*{Principaux points:}
 \begin{itemize}
-\item The roles of LRPs for marine fish stocks in Canada can include:
+\item Les rôles des PRL pour les stocks de poissons marins au Canada sont notamment les suivants :
 \begin{itemize}
-\item triggering rebuilding plans under the Fish Stocks provisions,
-\item communicating conservation risks to decision makers and the public,
-\item informing management decisions about fisheries as part of measurable objectives or operational control points, and
-\item as a component of performance metrics within a Management Procedure Framework.
+\item déclencher des plans de rétablissement conformément aux dispositions relatives aux stocks de poissons;
+\item communiquer les risques pour la conservation aux décideurs et au public;
+\item éclairer les décisions de gestion concernant les pêches dans le cadre d’objectifs mesurables ou de points de contrôle opérationnels;
+\item en tant que composante des paramètres de rendement dans un cadre de procédures de gestion.
 \end{itemize}
-\item Identifying LRPs is the responsibility of DFO's Science Sector.
-\item For Pacific salmon the application of LRPs has been limited, as fisheries management is often based on a wide range of management decisions made at different spatial scales (e.g., stream-level escapement goals, time-area closures, exploitation limits on aggregates).
+\item La détermination des PRL est la responsabilité de la Direction des sciences du MPO.
+\item Pour le saumon du Pacifique, l’application des PRL a été limitée, car la gestion des pêches repose souvent sur un large éventail de décisions de gestion prises à différentes échelles spatiales (p. ex. objectifs d’échappée au niveau des cours d’eau, fermetures spatio-temporelles, limites d’exploitation des complexes de stocks).
 \end{itemize}
 \end{tcolorbox}
 
 
-For marine fish stocks in Canada, LRPs have several roles including triggering rebuilding plans under DFO's Precautionary Approach Framework [@dfoFisheryDecisionmakingFramework2009] and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. For example, LRPs can be used as part of measurable objectives and can also be applied as operational control points which are points where management actions are triggered within harvest control rules. A conservation goal might be to avoid low biomass levels where serious harm is expected to occur which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  This objective can then inform the placement of operational control points within the harvest control rule. However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm, usually by a diverse range of managers, First Nations, and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021].<!--SUe suggested omitting these last 4  sentences, but I think this is relevant for aggregate abundance LRPs-->
+Pour les stocks de poissons marins au Canada, les PRL jouent plusieurs rôles, notamment celui de déclencher des plans de rétablissement conformément au cadre de l’approche de précaution du MPO [@dfoFisheryDecisionmakingFramework2009] et de la *Loi sur les pêches*, de communiquer les risques pour la conservation aux décideurs et au public, et d’éclairer les décisions de gestion concernant les pêches. Par exemple, les PRL peuvent être utilisés dans le cadre d’objectifs mesurables et peuvent également être appliqués comme points de contrôle opérationnels, c’est-à-dire des points où des mesures de gestion sont déclenchées dans le cadre de règles de contrôle des prises. Un objectif de conservation pourrait être d’éviter les faibles niveaux de biomasse où l’on s’attend à ce que des dommages graves se produisent, ce qui peut se traduire par un objectif mesurable consistant à éviter que l’abondance des géniteurs soit inférieure à un PRL avec une forte probabilité (par exemple, 95 %) sur une période donnée. Cet objectif peut ensuite servir de base à l’établissement de points de contrôle opérationnels dans la règle de contrôle des prises. Cependant, il peut y avoir plusieurs points de contrôle opérationnels dans la règle de contrôle des prises et ceux-ci peuvent être établis de manière à atteindre une série d’objectifs biologiques et socio-économiques au-delà de ceux associés aux dommages graves, généralement par une diversité de gestionnaires, de Premières Nations et de parties prenantes. En revanche, la Direction des sciences du MPO est chargée de déterminer les PRL en se fondant uniquement sur des considérations biologiques[@dfoScienceAdvicePrecautionary2021].<!--SUe suggested omitting these last 4  sentences, but I think this is relevant for aggregate abundance LRPs-->
 
 
-In addition, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify candidate procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives<!--, without being explicitly estimated--> [@dfoManagementProcedureFramework2021]. This approach explicitly accounts for a range of uncertainties in the biology of the stock, dynamics of the fleet, observations of abundances and ages at return, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. For fisheries in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of uncertainties (i.e., modelled scenarios) about stock and fishery dynamics. 
-One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified. Instead, management procedures can be evaluated against a suite of plausible underlying models or assumptions. 
+En outre, le PRL peut être utilisé comme mesure de rendement d’un cadre de procédure de gestion (ou d’une évaluation de stratégie de gestion) pour déterminer les procédures potentielles qui atteignent les objectifs de conservation (par exemple, une probabilité de 95 % de rester au-dessus d’un PRL pendant une période donnée) parmi d’autres objectifs<!--, without being explicitly estimated--> [@dfoManagementProcedureFramework2021]. Cette approche tient compte explicitement d’une série d’incertitudes concernant la biologie du stock, la dynamique de la flotte, les observations des abondances et des âges à la montaison, et la mise en œuvre des décisions de gestion. L’évaluation par simulation des procédures de gestion est largement considérée comme une pratique exemplaire pour éclairer les décisions de gestion en cas d’incertitude [@puntEssentialFeaturesNextgeneration2020]. Pour les pêches dans lesquelles les procédures de gestion ont été testées par simulation, l’évaluation de l’état du stock par rapport à un PRL n’est pas nécessaire tant qu’il a été démontré que la procédure de gestion choisie permet d’atteindre les objectifs de conservation (et éventuellement d’autres objectifs) avec une gamme d’incertitudes (c’est-à-dire des scénarios modélisés) concernant la dynamique du stock et de la pêche. 
+Un avantage de cette approche est qu’il n’est pas nécessaire d’indiquer un seul meilleur modèle sous-jacent (ou PRL) décrivant la dynamique de la population et de la flotte. Au contraire, les procédures de gestion peuvent être évaluées par rapport à une série de modèles ou d’hypothèses sous-jacentes plausibles. 
 
 
-For Pacific salmon, the application of LRPs at the SMU-level has been more limited. Fisheries management for Pacific salmon is often based on a wide range of management decisions made at different spatial scales (e.g., stream-level escapement goals, time-area closures, exploitation limits on aggregates), instead of LRPs *per se*.
-Also, the application of Management Procedure Frameworks is not common for Pacific salmon where the impact of diverse management levers and their interactions are often difficult to quantify [e.g., hatcheries and harvest, though see the AHA <!--LW comment: maybe take out AHA if you don't define it?-->model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009]. <!--CH: omitted as it seems out of place here: "In addition, salmon stock assessments have typically not integrated uncertainties in estimates of spawner abundances for reference point derivation [but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021]."  should be staton2017-->
-The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+Pour le saumon du Pacifique, l’application des PRL au niveau de l’unité de gestion des stocks (UGS) a été plus limitée. La gestion des pêches du saumon du Pacifique repose souvent sur un large éventail de décisions de gestion prises à différentes échelles spatiales (p. ex. objectifs d’échappée au niveau des cours d’eau, fermetures spatio-temporelles, limites d’exploitation sur les agrégats), plutôt que sur les PRL *en tant que tels*.
+De plus, l’application des cadres de procédures de gestion n’est pas courante pour le saumon du Pacifique où l’incidence des divers leviers de gestion et leurs interactions sont souvent difficiles à quantifier [par exemple, les écloseries et la récolte, voir cependant le modèle de l’évaluation des dommages admissible  <!--LW comment: maybe take out AHA if you don’t define it? -->documenté par @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009]. <!--CH: omitted as it seems out of place here: “In addition, salmon stock assessments have typically not integrated uncertainties in estimates of spawner abundances for reference point derivation [but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021].”  should be staton2017-->
+Les rôles des PRL évolueront probablement pour le saumon du Pacifique au fil du temps, et un examen exhaustif dépasse la portée du présent document.
 
 
 <!--KH: 
