--- a/guidelinesWP_FN/02-chap2.Rmd
+++ b/guidelinesWP_FN/02-chap2.Rmd
@@ -1,35 +1,35 @@
-# PRINCIPLES FOR LRP DEVELOPMENT {#principles}
-
+# PRINCIPES POUR L’ÉLABORATION DES POINTS DE RÉFÉRENCE LIMITES (PRL) {#principles}
 
 
 \begin{tcolorbox}[standard jigsaw,opacityback=0.8,colframe=black,boxrule=0.7pt,left=0.1in, sharp corners]
-\subsection*{Key Points:}
+\subsection*{Principaux points:}
 \begin{itemize}
-\item Principles for identifying Pacific salmon LRPs are adapted from national guidance on LRPs.%, as:
-\item \textbf{Principle 1.} LRPs should be selected based on the best available information. 
-\item \textbf{Principle 2.} LRPs should be consistent with the goal of avoiding serious harm. 
-\item \textbf{Principle 3.} LRPs should be operational, i.e., feasible to calculate and relevant to policy and management.
-\item \textbf{Principle 4.} LRPs should be reliably estimable and plausible. 
-\item \textbf{Principle 5.} When selecting among multiple methods for determining LRPs, the choice should take into account uncertainty. 
-\item \textbf{Principle 6.} Pacific salmon LRPs should be consistent with the goals and objectives of the WSP.
-\item These principles are intended to guide our approach for developing Pacific salmon LRPs while providing flexibility due to differences in local biological characteristics, data qualities and data quantities, among salmon species and stocks. 
+\item Les principes de détermination des PRL du saumon du Pacifique sont adaptés des directives nationales sur les PRL.%, as:
+\item \textbf{Principe 1.} Les PRL doivent être choisis en fonction des meilleures informations disponibles. 
+\item \textbf{Principe 2.} Les PRL doivent être compatibles avec l’objectif d’éviter tout dommage grave. 
+\item \textbf{Principe 3.} Les PRL doivent être opérationnels, c’est-à-dire calculables et pertinents pour le contexte stratégique et la gestion. 
+\item \textbf{Principe 4.} Les PRL doivent être plausible et pouvoir être estimés de manière fiable. 
+\item \textbf{Principe 5.} Au moment de choisir entre plusieurs méthodes pour déterminer les PRL, il faut tenir compte de l’incertitude. 
+\item \textbf{Principe 6.} Les PRL du saumon du Pacifique doivent être compatibles avec les buts et objectifs de la Politique concernant le saumon sauvage (PSS).
+\item Ces principes visent à guider notre approche pour l’élaboration des PRL du saumon du Pacifique tout en offrant une certaine souplesse en raison des différences entre les espèces et les stocks de saumon pour ce qui touche les caractéristiques biologiques locales ainsi que la qualité des données et leur quantité.
 \end{itemize}
 \end{tcolorbox}
 
-## PRINCIPLES
 
-Here we outline principles for developing LRPs for Pacific salmon, adapted from those developed for national-level guidance on LRPs (Marentette et al. In revision). That guidance allows for flexibility in the development of LRPs to respect differences in species life-histories and data types, quantities, and qualities, and is not meant to be prescriptive. By following similar principles, Pacific salmon LRPs are aligned with national direction. 
+## PRINCIPES
 
-
-
-**Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, data and knowledge informing underlying biological processes, Indigenous Knowledge, and comparison with similar SMUs (Marentette et al. In revision). Criteria for evaluating best scientific information developed for US National Standards may be applicable here [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in identifying the most appropriate approach to define an LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with a candidate LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and the uncertainties should be clearly communicated.
-
-Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments, should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs may require peer review.  
-
-Similarly, best practices, or practices that have been demonstrated to work well, can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008: "The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time."
+Nous présentons ici les principes d’élaboration des PRL pour le saumon du Pacifique, adaptés de ceux développés pour les directives nationales sur les PRL (Marentette et al. en cours de révision). Ces lignes directrices permettent une certaine souplesse dans l’élaboration des PRL afin de respecter les différences dans les cycles biologiques des espèces et les types, quantités et qualités de données, et ne se veut pas prescriptive. En suivant des principes similaires, les PRL du saumon du Pacifique sont harmonisés avec les directives nationales.  
 
 
-**Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionmakingFramework2009 and Section \@ref(intro) of this paper. The LRP should be set above the level where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those related to fishing and ecosystem components, e.g., dependent predators [@dfoFisheryDecisionmakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU.  In cases where only components of an SMU are monitored (e.g., CUs), the monitored component can be used to assess SMU status when it is thought to represent the entire SMU (Section \@ref(guidelines)). 
+
+**Principe 1**. Les PRL doivent être choisis selon les meilleures informations disponibles pour l’unité de gestion des stocks (UGS), y compris les signes de dommages graves, les données et les connaissances sur les processus biologiques sous-jacents, les connaissances autochtones et la comparaison avec des UGS similaires (Marentette et al. en cours de révision). Les critères d’évaluation des meilleures informations scientifiques élaborés pour les normes nationales américaines peuvent s’appliquer ici [@USCodeFederal2021]. Ces critères sont les suivants: la pertinence, l’inclusivité, l’objectivité, la transparence et l’ouverture, le caractère opportun, la vérification et la validation, et l’examen par les pairs. En outre, les informations scientifiques doivent inclure une évaluation des incertitudes et cerner les lacunes dans notre compréhension ou nos informations. Lorsqu’il existe une incertitude dans la détermination de l’approche la plus appropriée pour définir un PRL, ces incertitudes doivent être reconnues et prises en compte lors de la formulation de recommandations sur le PRL. Lorsque le poids de la preuve soutient un ensemble de suppositions ou d’hypothèses associées à un PRL potentiel, alors ce PRL peut être recommandé. Lorsque les preuves ne sont pas concluantes, cette incertitude doit être intégrée dans l’estimation de l’état et les incertitudes doivent être clairement communiquées.
+
+Dans le cadre de ce principe, il est reconnu que la science n’est pas statique et que de nouvelles découvertes font continuellement progresser notre compréhension des meilleures informations disponibles. En particulier, l’examen par les pairs est nécessaire pour garantir que la qualité et la crédibilité des données et des méthodes d’élaboration du PRL répondent aux normes de la communauté scientifique. Pour déterminer s’il y a lieu de procéder à un examen par les pairs, il faut tenir compte du niveau de nouveauté et de complexité, ainsi que de toute évaluation de stock antérieure examinée par les pairs. Bien que les mises à jour régulières puissent ne pas nécessiter d’examen officiel par les pairs, les nouveaux PRL ou l’application des points de référence et des PRL à de nouvelles unités de conservation (UC) et UGS peuvent nécessiter un examen par les pairs. 
+
+De même, les meilleures pratiques, ou les pratiques dont il a été démontré qu’elles fonctionnent bien, peuvent être utilisées pour éclairer les points de référence, tels que définis par @sainsburyBestPracticeReference2008: « Le concept de pratique exemplaire est basé sur la pratique exemplaire qui a été démontrée par l’utilisation, et reconnaît que les points de vue sur ce qui est meilleur s’amélioreront continuellement avec l’expérience. Les pratiques exemplaires ne sont pas une entité absolue ou fixe, ni une garantie d’adéquation. Elles sont fondées sur l’expérience acquise à ce jour et devraient évoluer avec le temps ».
+
+
+**Principe 2**. Les PRL doivent être compatibles avec l’objectif d’éviter tout dommage grave à l’UGS, comme il est décrit dans @dfoFisheryDecisionmakingFramework2009 et dans la section \@ref(intro) du présent document. Le PRL devrait être fixé au-dessus du niveau où des dommages graves se produisent et devrait éviter les pertes à long terme qui peuvent accompagner ces états indésirables, comme celles liées à la pêche et aux composantes de l’écosystème, par exemple les prédateurs dépendants [@dfoFisheryDecisionmakingFramework2009; @dfoPolicyNewFisheries2009]. En outre, les PRL doivent être représentatifs de l’ensemble de l’UGS. Dans les cas où seuls les composants d’une UGS sont surveillés (par exemple, les UC), le composant surveillé peut être utilisé pour évaluer l’état de l’UGS lorsqu’il est considéré comme représentant l’ensemble de l’UGS (section \@ref(guidelines)). 
 
 
 <!--Marentette et al Principle 2:
@@ -41,7 +41,7 @@ Similarly, best practices, or practices that have been demonstrated to work well
 
 <!--CH to consider further emphasizing possibility of using TK for identifying LRPs in other places in this WP?-->
 
-**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of fisheries on SMUs. <!--KH: do you need to say 'management of fisheries on SMUs', or can it just be 'management' more broadly?? Not sure. I'm leaing towards keeping as fisheries for now.--> Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  Also, it is beneficial if LRPs are easy to communicate to managers, First Nations, and stakeholders in a way that informs decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
+**Principe 3**. Les PRL doivent être opérationnels. Ils doivent pouvoir être calculés selon les données disponibles et pertinentes pour le contexte stratégique et la gestion de la pêche dans les UGS. <!--KH: do you need to say ‘management of fisheries on SMUs’, or can it just be ‘management’ more broadly?? Not sure. I’m leaing towards keeping as fisheries for now.--> La disponibilité des données varie considérablement entre les UC et les UGS, ce qui nécessite diverses approches pour les évaluations au niveau des UC et des UGS. Aucune méthode ne sera opérationnelle dans tous les cas. De plus, il est avantageux que les PRL soient faciles à communiquer aux gestionnaires, aux Premières Nations et aux intervenants, de manière à éclairer les décisions à des échelles de temps pertinentes pour la gestion. D’autres considérations opérationnelles sont le rapport coût-efficacité et la simplicité de compréhension.  
 
 <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) 
 CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpreted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
@@ -59,16 +59,16 @@ LRPs are part of harvest strategies and success in achieving an objective to avo
 At minimum, indicators, LRPs and therefore status should be feasible to measure or estimate. Other operational reasons to consider indicators, LRPs or status metrics may be: cost-effectiveness (impacting the ease and frequency of estimating stock status), communicability (affecting the ease of understanding), simplicity, the role that LRPs or stock status may play in HCRs or triggering the need for a rebuilding plan, or the need to estimate stock status to evaluate either trends over time or performance of management measures. These reasons are not mutually exclusive, and the relative priority of reasons that make a choice of indicator, LRP or metric of status “operationally useful” will be context-dependent, both within or across traditional versus procedural paradigms."
 -->
 
-**Principle 4**. LRPs should be reliably estimated. To the extent possible, LRPs should indicate a level above where serious harm occurs with acceptable accuracy and precision, instead of capturing random noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection, model specification, and the evidence to support underlying relationships and population dynamics used to derive LRPs. Reliability can be addressed by checking the sensitivity of LRPs to uncertainties in underlying data, models, or assumptions via sensitivity analyses or simulation-evaluation, or simply by assessing plausibility given biological or life-history information about the SMU (Marentette et al. In revision).
+**Principe 4**. Les PRL doivent être estimés de manière fiable. Dans la mesure du possible, les PRL doivent indiquer un niveau au-dessus duquel un préjudice grave se produit avec une exactitude et une précision acceptables, au lieu de saisir le bruit aléatoire ou les erreurs d’observation. La fiabilité de l’estimation dépendra de la qualité et de la fréquence de la collecte des données, de la spécification du modèle et des preuves à l’appui des relations sous-jacentes et de la dynamique des populations utilisées pour dériver les PRL. La fiabilité peut être abordée en vérifiant la sensibilité des PRL aux incertitudes des données, des modèles ou des hypothèses sous-jacentes au moyen d’analyses de sensibilité ou d’évaluations par simulation, ou simplement en évaluant la plausibilité compte tenu des informations biologiques ou du cycle biologique de l’UGS (Marentette et al. en cours de révision).
 
-LRPs can be derived using multiple analytical approaches. If LRPs cannot be estimated reliably using one method or approach, then it is advisable to consider alternative approaches based on different sets of assumptions and/or data. When LRP estimates converge using different approaches, this increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
+Les PRL peuvent être calculés à l’aide de plusieurs approches analytiques. Si les PRL ne peuvent pas être estimés de manière fiable à l’aide d’une méthode ou d’une approche, il est conseillé d’envisager d’autres approches basées sur des ensembles d’hypothèses et/ou de données différents. Lorsque les estimations du PRL convergent à l’aide de différentes approches, cela renforce le fait que les méthodes saisissent la dynamique sous-jacente de la population malgré des hypothèses différentes et l’utilisation des données disponibles.
 
 <!--RE: pgh below
 CW: 'statistically integrated' or sequential Bayes? i.e. sampling from posterior. 
 CH: I think the point of Staton et al. 2017 is that for salmon, statistical integration wasn't always essential and the standard sequential approach may be sufficient in many cases (though underestimating uncertainty). I don't think they necessarily recommended Bayes over frequentest. For the watershed-area model, I used TMB, but draw random draws from 95%CI of SREP to get uncertainties in benchmarks. We used TMB to minimize estimation time as we thought we would be running simulation evaluations.  So, I'd prefer not to include recommendation on Bayes vs Freq analyses. However, instead of recommending integrated analyses always,  we could recommend that it be considered. 
 ÇW: agreed. --> 
 
-Where possible, a statistically integrated approach for estimating LRPs should be considered in order to propagate uncertainties throughout analyses and to be consistent with current best practices in fisheries stock assessments [@puntEssentialFeaturesNextgeneration2020]. @statonSequentialIntegratedBayesian2017a and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increases realism of model estimates and associated uncertainty. However, @statonSequentialIntegratedBayesian2017a demonstrated that similar point estimates of current status can be achieved by using sequential estimation approaches and the benefits of statistically integrated approaches may not be large enough to warrant an integrated analysis in all cases. 
+Dans la mesure du possible, il convient d’envisager une approche statistiquement intégrée pour l’estimation des PRL afin de propager les incertitudes tout au long des analyses et de se conformer aux meilleures pratiques actuelles en matière d’évaluation des stocks de pêche [@puntEssentialFeaturesNextgeneration2020]. @statonSequentialIntegratedBayesian2017a et @defilippoImprovingShorttermRecruitment2021 fournissent des exemples récents de modèles intégrés utilisés pour l’évaluation des saumons. Les deux études montrent que la propagation de l’incertitude augmente le réalisme des estimations du modèle et de l’incertitude associée. Cependant, @statonSequentialIntegratedBayesian2017a ont démontré que des estimations ponctuelles similaires de l’état actuel peuvent être obtenues en utilisant des approches d’estimation séquentielles et que les avantages des approches statistiquement intégrées peuvent ne pas être suffisamment importants pour justifier une analyse intégrée dans tous les cas.  
 
 
 <!--CH: consider Marentette et al: 
@@ -82,9 +82,10 @@ Reliable estimation of limit reference points or stock status metrics can mean a
 "
 -->
 
-**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data, include fewer assumptions, and explicitly account for underlying uncertainties should be preferred<!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred". CH. I think a comma after high-qulaity data was missing before which changed the meaning of the sentence. I've kept the last phrase in, with the new comma.-->. 
+**Principe 5**. Lors de la sélection parmi plusieurs méthodes pour définir les PRL, le choix doit tenir compte de l’incertitude <!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I’m not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we’re trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf? -->. Les méthodes candidates pour les PRL varient dans la manière et l’étendue de leur prise en compte de l’incertitude des données sous-jacentes, de la dynamique de la population modélisée (hypothèses de paramètres et structure du modèle), et de l’établissement des états à l’échelle des UC. Ces incertitudes créent des risques que les PRL fournissent un seuil trompeur de dommage grave. Toutes choses égales par ailleurs, il convient de privilégier les méthodes qui reposent sur des données de haute qualité, comportent moins d’hypothèses et tiennent compte explicitement des incertitudes sous-jacentes <!-- KH: not clear on the remainder of this sentence, so suggest removing “.., and explicitly account for underlying uncertainties should be preferred”. CH. I think a comma after high-qulaity data was missing before which changed the meaning of the sentence. I’ve kept the last phrase in, with the new comma.-->. 
 
-When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data qualities and quantities can be evaluated in simulation, where LRPs that are less sensitive to key uncertainties would be preferred.
+Lors de l’examen des PRL en fonction d’autres hypothèses de modèle, les PRL peuvent être choisis en fonction de la force des preuves pour les hypothèses sous-jacentes ou en fonction de la moyenne lorsque d’autres hypothèses sont tout aussi plausibles. En outre, la sensibilité des PRL à diverses hypothèses de modèles sous-jacents ou à des qualités et quantités de données peut être évaluée par simulation, les PRL les moins sensibles aux principales incertitudes étant préférables.
+
 
 
 <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
@@ -98,14 +99,15 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 -->
 
 
-**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goal of avoiding serious harm under DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication status and serious harm. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principe 6**. En plus des principes dérivés pour les espèces marines en général (principes 1 à 5) et pour atteindre l’objectif d’éviter les dommages graves en vertu de la politique de l’approche de précaution du MPO (principe 2), les PRL du saumon du Pacifique devraient être conformes aux buts et objectifs de la PSS. La PSS exige à la fois la définition d’unités biologiques et l’évaluation de leur état selon des paramètres biologiques, les points de référence inférieurs étant utilisés pour représenter le niveau qui évite le risque d’extinction. Cette approche est compatible avec la volonté d’éviter tout préjudice grave à l’UC. Au-dessus des points de référence inférieurs (au-dessus de l’état rouge), les répercussions irréversibles ou lentement réversibles sont évitées. Ignorer l’état au niveau de l’UC en se concentrant uniquement sur l’état au niveau de l’UGS peut entraîner l’épuisement en série (ou la perte) d’UC faibles au sein d’une UGS, entraînant un état indicateur éventuellement trompeur et un dommage grave. Par conséquent, par souci de cohérence avec la PSS, les PLR doivent prendre en compte l’états des UC composant l’UGS.
 
-## APPLYING THE PRINCIPLES TO LRP DEVELOPMENT
+## APPLICATION DES PRINCIPES À L’ÉLABORATION DES PRL
 
-Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in biological characteristics and types, qualities and quantities of data among Pacific salmon species and SMUs. We indicate the extent to which candidate LRP methods proposed here are aligned with these principles. <!--KH: can you be more specific on how / where we demonstrate this? - or, would it be more correct to say "We demonstrate the application of candidate LRP methods that are aligned with these principles? CH: I explain alignment to principles in the text of the next section. I think it's okay to leave as is, though I changed 'demonstrate' to 'indicate'--> Additional LRP methods may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status; the development of these additional methods should be aligned with the key principles summarized here.
+Notre objectif est de fournir des directives générales sur l’élaboration des PRL en suivant les principes énumérés ci-dessus tout en offrant une certaine souplesse en raison des différences entre les espèces de saumon du Pacifique et les UGS sur le plan des caractéristiques biologiques, du type de données, de la quantité de données et de la qualité des données. Nous indiquons dans quelle mesure les méthodes de PRL potentiels proposés ici sont conformes à ces principes. <!--KH: can you be more specific on how / where we demonstrate this? - or, would it be more correct to say “We demonstrate the application of candidate LRP methods that are aligned with these principles? CH: I explain alignment to principles in the text of the next section. I think it’s okay to leave as is, though I changed ‘demonstrate’ to ‘indicate’-->D’autres méthodes de détermination des PRL pourraient être élaborées à l’avenir afin de saisir un plus large éventail de disponibilité, de qualité et de types de données, et/ou de dimensions de l’état biologique; l’élaboration de ces méthodes supplémentaires devrait s’harmoniser avec les principes clés résumés ici.
 
 
-In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP, and candidate LRPs are proposed. Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
+Dans la section suivante, les méthodes d’estimation de l’état des UC sont décrites, telles qu’elles ont été mises en œuvre dans les évaluations précédentes de l’état des UC dans le cadre de la PSS, et des PRL potentiels sont proposés. Les directives sur la façon de choisir parmi les PRL sont décrites dans la section \@ref(guidelines). 
+ 
 
 
 
