--- a/guidelinesWP_FN/09-appendix.Rmd
+++ b/guidelinesWP_FN/09-appendix.Rmd
@@ -1,11 +1,11 @@
-# META-ANALYSIS OF CORRELATIONS IN SPAWNER ABUNDANCES AMONG CUS WITHIN SMUS {#app:meta-analysis-appendix}
+# MÉTA-ANALYSE DES CORRÉLATIONS DANS L’ABONDANCE DES GÉNITEURS ENTRE LES UNITÉS DE CONSERVATION (UC) AU SEIN DES UNITÉS DE GESTION DES STOCKS (UGS) {#app:meta-analysis-appendix}
 
 
 
-```{r lrp-smu-corr-plot, fig.cap="Distribution of mean pairwise correlations between CUs for 40 SMUs of Pacific salmon arrange by species. Points are scaled to the number of CUs within a SMU with the largest point equal to 25 CUs. ", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r lrp-smu-corr-plot, fig.cap="Répartition des corrélations moyennes par paire entre les UC pour 40 UGS de saumon du Pacifique classées par espèce. Les points sont proportionnels au nombre d’UC d’une UGS, le point le plus élevé étant égal à 25 UC.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/lrp-smu-corr.png")
 
 ```
 
 
-In a meta-analysis of spawner time-series across Pacific salmon species throughout BC, pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon. For Chinook Salmon, correlations were more variable among CUs and sometimes negative, in part due to the confounding influence of hatchery production in some of those systems.  A pervasive problem with correlation analyses for Pacific salmon is that populations with available time-series tend to be more heavily managed or suitable for less expensive spawner surveys, and may not represent those without data which tend to be remote, expensive for spawner surveys, and without direct management interventions.  Data are taken from the [Pacific Salmon Explorer](https://www.salmonexplorer.ca/), provided by E. Hertz (Pacific Salmon Foundation, July 2020). A link to the Github repository containing code to perform these analyses are provided in Appendix \@ref(app:links).
+Dans une méta-analyse des séries chronologiques sur les géniteurs des diverses espèces de saumons du Pacifique dans toute la Colombie-Britannique, les corrélations par paires dans les abondances de géniteurs entre les UC au sein des UGS avaient tendance à être positives pour le saumon rose, le saumon kéta, le saumon coho et le saumon rouge. Pour le saumon chinook, les corrélations étaient plus variables entre les UC et parfois négatives, en partie en raison de l’influence confusionnelle de la production en écloserie dans certains de ces systèmes. Un problème omniprésent dans les analyses de corrélation pour les saumons du Pacifique est que les populations disposant de séries chronologiques ont tendance à être plus fortement gérées ou à se prêter à des relevés moins coûteux sur les géniteurs, et peuvent ne pas représenter celles qui ne disposent pas de données, qui ont tendance à être éloignées, coûteuses pour les relevés sur les géniteurs, et sans intervention directe de gestion. Les données sont tirées de l’outil [Pacific Salmon Explorer](https://www.salmonexplorer.ca/), fourni par E. Hertz (Fondation du saumon du Pacifique, juillet 2020). Un lien vers le dépôt GitHub contenant le code pour effectuer ces analyses est fourni à l’annexe \@ref(app:links).
