--- a/guidelinesWP_FN/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP_FN/10-appendixCaseStudies.Rmd
@@ -5,22 +5,21 @@ After that, all subsequent sections will be turned into appendices. -->
 
 `r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'`
 
-# CASE STUDIES {#app:case-studies}
+# ÉTUDES DE CAS {#app:case-studies}
 
 
-We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inside South Coast Chum Salmon  (excluding Fraser River CUs), each comprised of 3-7 component CUs. These SMUs were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inside South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum), and two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stocks provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see @holtCaseStudyApplicationsInpress. 
+Nous illustrons l’application des méthodes potentielles pour les points de référence limites (PRL) élaborés dans la section \@ref(est-methods) à trois unités de gestion des stocks (UGS) comme études de cas, évaluons la sensibilité des PRL à diverses hypothèses, et utilisons ces applications pour éclairer les directives présentées dans la section \@ref(guidelines). Les études de cas comprenaient le saumon coho du Fraser intérieur, le saumon chinook de la côte ouest de l’île de Vancouver (COIV) et le saumon kéta de la côte sud intérieure (à l’exception des unités de conservation [UC] du Fraser), chaque UGS comprenant de 3 à 7 UC. Ces UGS ont été choisies parce qu’elles couvrent un large éventail de types de données et de disponibilités, allant de données riches (saumon coho du Fraser intérieur) à des données limitées (saumon kéta de la côte sud intérieure). En outre, elles variaient sur le plan des contributions d’écloseries, allant d’un niveau élevé (saumon chinook de la COIV) à un niveau relativement faible (saumon coho du Fraser intérieur et saumon kéta de la côte sud intérieure), et deux de ces études de cas sont incluses dans le premier lot proposé de stocks à réglementer en vertu des dispositions sur les stocks de poissons (saumon coho du Fraser intérieur et saumon chinook de la COIV). Pour chaque étude de cas, l’ensemble des méthodes de PRL considérées est fonction des données disponibles et des méthodes d’évaluation précédemment élaborées pour les UC composantes. Dans cette section, nous fournissons une brève description de chaque étude de cas et des méthodes appliquées à chacune. Pour des descriptions plus complètes des études de cas, y compris les caractéristiques des UGS, les sources de données, les méthodes d’analyse et les résultats, voir @holtCaseStudyApplicationsInpress. 
 
 
+## SAUMON COHO DU FRASER INTÉRIEUR
 
-## INTERIOR FRASER RIVER COHO
+L’UGS de saumon coho du Fraser intérieur comprend le saumon coho qui fraye dans le fleuve Fraser et ses affluents en amont de Hells Gate, dans le canyon du Fraser. Cette UGS est composée de 5 UC: le moyen Fraser, le canyon du Fraser, la basse Thompson, la Thompson Nord et la Thompson Sud [@dfoWildSalmonPolicy2015]. Le déclin de l’abondance des géniteurs de saumon coho du Fraser intérieur tout au long des années 1990 a conduit à une série de mesures de gestion visant à favoriser le rétablissement, y compris d’importantes restrictions de la pêche à partir de 1998 [@deckerAssessmentInteriorFraser2014]. Les travaux antérieurs de l’équipe chargée du rétablissement du saumon coho du Fraser intérieur (ÉRCFI) ont permis de désigner 11 sous-populations nichées dans les cinq UC et d’élaborer des objectifs de rétablissement fondés sur le maintien de l’abondance de chaque sous-population au-dessus des seuils de conservation [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. En 2014, une évaluation de l’état de la Politique concernant le saumon sauvage (PSS) revue par des pairs a classé trois de ces UC dans la catégorie ambre (moyen Fraser, canyon du Fraser, Thompson Sud) et les deux autres UC dans la catégorie ambre/vert (basse Thompson, Thompson Nord) [@dfoWildSalmonPolicy2015]. Dans le cadre de l’évaluation de la PSS, G~gén~ a été estimé pour chaque UC et utilisé comme l’un des nombreux points de référence pris en compte pour déterminer l’état de l’UC intégrée. 
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each sub-population above conservation thresholds [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when determining integrated CU status.  
-
-We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2020 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for CU status-based and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
+Pour calculer des points de référence fondés sur le rapport géniteur-recrutement au niveau de l’UC, nous avons utilisé les données sur l’abondance annuelle totale des géniteurs, le recrutement selon l’âge (des géniteurs naturels), et les indices du taux de survie de l’état de saumoneau à l’état adulte provenant des écloseries pour les années de remonte 1998 à 2020. Les données sur l’abondance des géniteurs d’origine naturelle dans chacune des 11 sous-populations, additionnées au niveau des UC, ont été utilisées pour évaluer l’état et les tendances au niveau des UC pour les PRL basés sur l’état des UC et de régression logistique. Ces données, ainsi que les taux d’exploitation, ont été utilisés pour paramétrer le modèle de projection pour les PRL de projection. La contribution des écloseries à la production était généralement faible dans cette UGS, avec des valeurs d’influence naturelle proportionnelle (INP) >0,5, et habituellement >0,72. L’abondance des géniteurs est positivement corrélée entre les UC, avec une corrélation moyenne de 0,56 (figure \@ref(fig:density-cor-plot)).
 
 <!--CH: to do for next iteration: add rug plot for data points, and limit x-axis to 00.5=-->
 
-```{r density-cor-plot, fig.cap="Distribution of correlations in spawner abundances among CUs (or inlets for WCVI Chinook) for the three case studies", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r density-cor-plot, fig.cap="Distribution des corrélations dans l’abondance des géniteurs entre les UC (ou les bras de mer pour le saumon chinook de la COIV) pour les trois études de cas.", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/DataOut/WCVI_Spawner_cors.csv', './data/chinook-Scors.csv',  mode="wb")
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/DataOut/chum-escapement-correlation-matrix.csv', './data/chum-Scors.csv',  mode="wb")
@@ -39,46 +38,48 @@ df_coho <- data.frame(cor=coho$amongCUCorr, SMU="IFR Coho")
 
 df <- df %>% add_row(df_chum) %>% add_row(df_coho)
 ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + 
-  xlim(-1,1) + xlab("Pairwise Pearson correlation in spawner abundance")
+  xlim(-1,1) + xlab("Corrélation de Pearson par paires dans l’abondance des géniteurs")
 
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@interiorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
+Nous avons caractérisé l’état de l’UC de trois façons, en utilisant: 1) l’explorateur de l’état du saumon du Pacifique, 2) les abondances au niveau de l’UC par rapport à G~gén~ comme point de référence inférieur sur l’abondance dérivée de la relation géniteur-recrutement dans le cadre de la PSS, et 3) la répartition de l’abondance des géniteurs par rapport aux objectifs de répartition élaborés par l’ÉRCFI [@interiorfrasercohorecoveryteamConservationStrategyCoho2006]. Dans la seconde approche, nous avons considéré deux hypothèses structurelles sur la relation géniteur-recrutement fondées sur @kormanEvaluationFrameworkAssessing2019 et @arbeiderInteriorFraserCoho2020, qui concernent la force de la densité-dépendance. La troisième approche reconnaît qu’une répartition adéquate des géniteurs entre les sous-populations peut être nécessaire à la persistance à long terme de l’UGS [@interiorfrasercohorecoveryteamConservationStrategyCoho2006], et qu’une contraction de cette répartition peut représenter un risque accru de disparition [@arbeiderInteriorFraserCoho2020]. Bien que les approches multidimensionnelles, comme l’explorateur de l’état du saumon du Pacifique, soient recommandées pour les évaluations de la PSS [@holtIndicatorsStatusBenchmarks2009], nous avons appliqué les deux autres approches (2 et 3) pour appuyer l’élaboration des PRL de l’abondance globale et pour avoir un point de comparaison avec l’explorateur des saumons. Même si les PRL d’abondance globale ne sont pas requis pour la gestion de la récolte de cette UGS, nous fournissons des PRL de régression logistique et de projection à des fins de démonstration. Les pêches du saumon coho du Fraser intérieur sont gérées en vertu d’un régime de gestion bilatéral entre le Canada et les États-Unis, décrit en détail à l’annexe IV, chapitre 5, du Traité sur le saumon du Pacifique.
 
-For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for CU status-based and aggregate abundance LRP methods.
+Pour cette UGS, nous avons évalué la sensibilité des PRL fondés sur les abondances globales à la disponibilité des données à l’aide d’une analyse rétrospective en réestimant les points de référence au niveau des UC, les états des UC et les PRL au niveau de l’UGS chaque année en utilisant uniquement les données antérieures à cette année. Nous avons également mis en œuvre une analyse de sensibilité dans laquelle une ou deux UC ont été retirées des analyses de manière itérative et les points de référence au niveau de l’UC, les états des UC, les PRL au niveau de l’UGS et les états au niveau de l’UGS ont été réestimés. Nous avons également effectué des analyses de sensibilité liées aux hypothèses structurelles concernant la relation stock-recrutement lors de la dérivation des points de référence au niveau de l’UC pour les méthodes de PRL fondées sur l’état des UC et sur l’abondance globale.
 
-We found that LRPs and resulting status were most sensitive to structural assumptions about the shape of the stock-recruitment relationship. LRPs were less sensitive to LRP methods or CU assessment approach (Pacific Salmon Status Scanner versus single-metric on spawner abundances versus single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
+Nous avons constaté que les PRL et l’état qui en découle étaient les plus sensibles aux hypothèses structurelles sur la forme de la relation stock-recrutement. Les PRL étaient moins sensibles aux méthodes de PRL ou à l’approche d’évaluation des UC (explorateur de l’état du saumon du Pacifique par rapport à un paramètre unique sur l’abondance des géniteurs par rapport à un paramètre unique sur la répartition) ou à l’ajout de plus d’années ou d’UC de données. Cependant, nous notons que pour les PRL de régression logistique, l’exclusion des UC a entraîné de plus grandes incertitudes quant à l’état au niveau des UGS, bien que les intervalles de confiance (IC) à 95 % de l’état se recoupent généralement avec l’état estimé en utilisant toutes les données. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
 
-For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression LRPs.
-
-## WEST COAST VANCOUVER ISLAND CHINOOK
+Pour cette étude de cas, nous avons également démontré l’approche consistant à faire la moyenne des incertitudes structurelles pour fournir un PRL de projection qui tient compte de cette incertitude. Un calcul de moyenne similaire est également possible pour les PRL de régression logistique.
 
 
-The WCVI Chinook SMU consists of three CUs [@holtbyConservationUnitsPacific2007], seven large inlets (or sounds), and 20 escapement indicator populations distributed across the seven inlets and three CUs. Escapement indicator populations are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these populations<!--LW: changed from stocks-->, however, only escapement indicator populations without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these populations<!--LW: changed from stocks-->, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+## SAUMON CHINOOK DE LA CÔTE OUEST DE L’ÎLE DE VANCOUVER
 
 
-For WCVI Chinook, inlets nested within CUs are considered an important spatial scale of biodiversity given the geographic separation of spawning habitats among inlets, and limited straying observed among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We therefore considered spawner abundances at the scale of inlets within CUs because of expected limited demographic exchange at this spatial scale.
+L’UGS du saumon chinook de la COIV comprend trois UC [@holtbyConservationUnitsPacific2007], sept grands bras de mer (ou détroits) et 20 populations indicatrices d’échappée réparties dans les sept bras de mer et les trois UC. Les populations indicatrices d’échappée sont celles pour lesquelles on dispose de séries chronologique relativement complètes de l’abondance des géniteurs avec une méthodologie d’observation cohérente [@riddellReview2001Chinook2002; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018]. La mise en valeur des écloseries est une composante substantielle de plusieurs de ces populations <!--LW: changed from stocks-->, cependant, seules les populations indicatrices d’échappées sans mise en valeur significative des écloseries (INP $\geqslant$ 0,5) ont été incluses dans nos analyses (voir section \@ref(est-methods)). Puisque les séries chronologiques de la proportion de géniteurs provenant d’écloseries ne sont pas disponibles pour ces populations <!--LW: changed from stocks-->, les abondances totales de géniteurs ont été utilisées dans l’évaluation des états des UC et des UGS globales, ce qui peut entraîner des évaluations trop optimistes de l’état par rapport aux analyses excluant les poissons provenant d’écloseries (comme dans l’étude de cas du saumon coho du Fraser intérieur). L’abondance des géniteurs tend à être positivement corrélée entre les bras de mer de l’UGS, avec une corrélation moyenne de 0,28 (figure \@ref(fig:density-cor-plot)).
 
 
-Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as Red status in a recent integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan (IFMP) and a rebuilding plan is under development [@dfoSouthernSalmonIntegrated2021]. Poor smolt-to-age-2 survival for WCVI Chinook and low spawner levels over the past two decades were highlighted as reasons for conservation concern in the IFMP [@dfoSouthernSalmonIntegrated2021].
+Pour le saumon chinook de la COIV, les bras de mer nichés dans les UC sont considérés comme une échelle spatiale importante de la biodiversité étant donné la séparation géographique des habitats de fraie entre les bras de mer et le faible nombre de saumons errants observé entre les bras de mer (D. McHugh comm. pers. Évaluation des stocks de la côte sud du MPO). Nous avons donc considéré les abondances de géniteurs à l’échelle des bras de mer au sein des UC en raison des échanges démographiques limités attendus à cette échelle spatiale.
 
 
-Biological benchmarks have been estimated for WCVI indicator populations using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, S~REP~ (spawner abundances at replacement) and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
-
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: CU status-based LRPs and projection LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of @holtCaseStudyApplicationsInpress.
-
-We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, reductions (by 25%) or increases (by 50%) in productivities among inlets resulted in relatively large changes in LRPs estimates. 
+Deux des trois UC de cette UGS, COIV-Sud et COIV-Nootka et Kyuquot, ont été évaluées comme étant dans la zone d’état rouge dans une récente évaluation intégrée de la Politique concernant le saumon sauvage [@dfoIntegratedBiologicalStatus2016]. Le saumon chinook de la COIV a été indiqué comme un stock préoccupant dans le plan de gestion intégrée des pêches (PGIP) de 2021 et un plan de rétablissement est en cours d’élaboration [@dfoSouthernSalmonIntegrated2021]. Le faible taux de survie des saumons chinooks de la COIV jusqu’à l’âge 2 et les faibles niveaux de géniteurs au cours des deux dernières décennies ont été soulignés comme étant des motifs de préoccupation sur le plan de la conservation dans le PGIP [@dfoSouthernSalmonIntegrated2021].
 
 
-## INSIDE SOUTH COAST CHUM - NON-FRASER
+Les points de référence biologiques ont été estimés pour les populations indicatrices de la COIV à l’aide d’une relation empirique entre la superficie du bassin versant et deux points de référence biologiques stock-recrutement, G~REMP~ (abondance des géniteurs au moment du remplacement) et G~RMD~, basés sur une méta-analyse de 25 stocks de  saumons chinook en Amérique du Nord [@parkenHabitatbasedMethodsEstimate2006]. Le manque de données rigoureuses sur le recrutement des stocks de saumon chinook de la COIV empêche l’utilisation de points de référence basés sur le recrutement des stocks. Pour l’élaboration des PRL pour le saumon chinook de la COIV, la relation empirique entre la superficie du bassin versant et le G~REMP~ a été réestimée à l’aide d’un modèle hiérarchique bayésien [comme dans @liermannUsingAccessibleWatershed2010], et appliquée aux entrées du saumon chinook de la COIV. 
 
-The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU as they have been categorized as a separate SMU (Inside South Coast Chum - Fraser). While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fisheries and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portions of this SMU, with declines in the north, especially in the region defined by the Southern Coastal Streams CU component. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional WSP assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
+Nous avons caractérisé l’état des UC de deux façons pour cette étude de cas, en utilisant: 1) l’explorateur de l’état du saumon du Pacifique, 2) les abondances au niveau des UC par rapport à G~gén~ dérivées des estimations du modèle de bassin versant de G~REMP~ et de la productivité dérivée d’un modèle de survie spécifique au stade de vie avec l’avis d’experts. Nous avons calculé deux types de PRL: les PRL fondés sur l’état des UC et les PRL de projection. Selon des évaluations au niveau des UC, il n’y a pas eu d’années dans les données historiques où toutes les UC étaient au-dessus de la zone rouge; il n’a donc pas été possible de déterminer les PRL de régression logistique. Même si les PRL d’abondance globale ne sont pas nécessaires pour la gestion des prises de cette UGS, nous fournissons des PRL de projection à des fins d’illustration. Les pêches sont gérées en fonction d’une combinaison du régime de gestion bilatéral Canada-États-Unis indiqué dans le Traité sur le saumon du Pacifique et de la cogouvernance locale. Nous avons mis en œuvre des analyses de sensibilité sur les PRL de projection pour deux incertitudes clés: la variabilité de l’exploitation entre les bras de mer et la productivité intrinsèque. D’autres analyses explorant les répercussions de l’exploitation, la variabilité de la productivité intrinsèque et la capacité sont fournies à l’annexe D de @holtCaseStudyApplicationsInpress.
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions in order to produce a standardized data set over the full length of the time series. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships for use in stock-recruitment benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three systems with high levels of enhancement from the Georgia Strait CU (one with large hatchery production and two with extensive artificial spawning channels). The remaining systems had a mix of relatively small hatchery production or no hatchery production [see @lynchAssessmentEnhancedChum2020]. Where available, annual estimates of hatchery-origin spawners were removed from total spawner abundances. 
-
-For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the CU status-based LRP and logistic regression LRPs to this case study and evaluated the sensitivity of SMU-level status from CU status-based LRPs to various data inputs. We were not able to generate reliable logistic regression LRPs for this SMU because logistic regression models did not fit the data well, as shown by model diagnostics.
+Nous avons constaté que l’état était cohérent entre les méthodes de PRL disponibles et avec une évaluation publiée précédemment. Cependant, les PRL de projection étaient très sensibles aux productivités sous-jacentes de la population. Bien que le PRL du scénario de base suppose une répartition relativement diffuse des productivités, conforme à la gamme des avis d’experts, les réductions (de 25 %) ou les augmentations (de 50 %) de la productivité dans les bras de mer ont entraîné des changements relativement importants dans les estimations des PRL. 
 
 
-We found that assessments based on the Pacific Salmon Status Scanner gave identical results to the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses always resulted in more pessimistic statuses relative to the LRP. 
+## SAUMON KÉTA DE LA CÔTE SUD INTÉRIEURE – SAUF LE FLEUVE FRASER
+
+L’UC de saumon kéta de la côte sud intérieure (ci-après appelée « UC de saumon kéta de l’intérieur de la côte sud ») comprend sept UC de saumon kéta provenant de rivières qui se déversent dans le détroit de Johnstone et la mer des Salish le long de la partie continentale de la Colombie-Britannique et de la côte est de l’île de Vancouver. Les UC de saumon kéta frayant dans le bassin versant du fleuve Fraser sont exclues de cette UGS, car elles ont été classées dans une UGS distincte (saumon kéta de la côte sud intérieure – Fraser). Bien que ces deux UGS présentent un chevauchement important au niveau des pêches océaniques, elles ont été séparées en deux UGS en raison des différences observées sur le plan des pêches terminales et des habitats d’eau douce. @godboutStockStatusWild2004 ont relevé un état variable, mais stable dans les parties centrale et méridionale de cette UGS, avec des déclins dans le nord, en particulier dans la région définie par la composante UC des ruisseaux côtiers du sud. @holtEvaluatingBenchmarksBiological2018 ont trouvé des résultats similaires dans une évaluation provisoire de l’état selon la PSS. Les abondances de géniteurs ont tendance à n’être que très faiblement corrélées entre les UC pour cette UGS, avec une corrélation moyenne de 0,12 (figure \@ref(fig:density-cor-plot)). 
+
+L’UGS du saumon kéta de l’intérieur de la côte sud est considérée comme limitée sur le plan des données. Bien que des séries chronologiques d’échappée soient disponibles pour de nombreux cours d’eau à partir de 1953, plusieurs séries sont incomplètes et nécessitent des hypothèses de comblement afin de produire un ensemble de données normalisées sur toute la série chronologique. La qualité des données de recrutement n’est pas suffisante pour estimer de manière fiable les paramètres des relations stock-recrutement en vue de leur utilisation dans les points de référence du stock-recrutement. Au lieu de cela, les points de références ont été calculés en tant que centile de la série chronologique historique de l’abondance des géniteurs au niveau de l’UC (centiles de référence) pour éclairer l’état selon la PSS, comme il est recommandé par @holtEvaluatingBenchmarksBiological2018. Nous avons retiré trois systèmes avec des niveaux élevés d’aménagement de l’UC du détroit de Georgia (un avec une grande production d’écloserie et deux avec des chenaux de fraie artificiels étendus). Les autres systèmes avaient un mélange de production d’écloserie relativement faible ou aucune production d’écloserie [voir @lynchAssessmentEnhancedChum2020]. Lorsqu’elles étaient disponibles, les estimations annuelles des géniteurs issus d’écloseries ont été retirées de l’abondance totale des géniteurs. 
+
+Pour cette étude de cas, nous considérons deux approches pour caractériser l’état des UC: 1) l’explorateur de l’état du saumon du Pacifique et 2) une mesure unique sur les abondances de géniteurs utilisant des points de référence fondés sur le centile. Nous avons appliqué le PRL fondé sur l’état des UC et le PRL de régression logistique à cette étude de cas et évalué la sensibilité de l’état au niveau de l’UGS à partir du PRL fondé sur l’état des UC à diverses entrées de données. Nous n’avons pas été en mesure de générer des PRL de régression logistique fiables pour cette UGS, car les modèles de régression logistique ne s’ajustaient pas bien aux données, comme le montrent les diagnostics des modèles.
+
+
+Nous avons constaté que les évaluations basées sur l’explorateur de l’état du saumon du Pacifique donnaient des résultats identiques à ceux du monomètre sur les abondances de géniteurs par rapport aux points de référence fondés sur le centile. De plus, comme pour le coho du Fraser intérieur, l’augmentation du nombre d’UC incluses dans les analyses a toujours donné lieu à des états plus pessimistes par rapport au PRL. 
+
 
